<resources>
    <string name="app_name">lewislovette-7814291</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enterEmail">enter email here</string>
    <string name="enterPassword">enter password here</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="createPasswordHint">create your password here</string>
    <string name="loginPage">Login</string>
    <string name="save">Save Note</string>
    <string name="noteHint">Enter your note here!</string>
    <string name="createNote">Create Note</string>
    <string name="savedNotes">Saved Notes</string>
    <string name="title_activity_navigation_screen">NavigationScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="long_text">This This This This This This This This This This This This This This This This This This This         This This This This This This This This This This This This This This This This This This This          IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS         IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS          The The The The The The The The The The The The The The The The The The The The The The The The         The The The The The The The The The The The The The The The The The The The The The The The The          Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last         Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last          Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment         Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment</string>
    <string name="nav_add_note">Add Notes</string>
    <string name="nav_see_note">See Notes</string>
    <string name="nav_profile">Profile</string>
    <string name="notes_here">Notes Here</string>
    <string name="test_user">Lewis Lovette</string>
    <string name="test_user2">Aaron Machin</string>
    <string name="deleteNote">Delete Note</string>
    <string name="title_activity_note_list">NoteList</string>
    <string name="profilePhoto">Take picture for profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyD3gCx6GQf5gXBr35dshUKMT37LuJkkURs</string>
    <string name="mapsLocation">See Location</string>

</resources>
