<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/notesTopGap" />

        <EditText
            android:id="@+id/addNoteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/noteHint"
            android:inputType="textMultiLine"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/saveButton"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="@android:style/Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button"
                tools:text="@string/createNote" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savedNotes" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>